--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,16 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    dexOptions {
+        javaMaxHeapSize "4g"
     }
     useLibrary 'org.apache.http.legacy'
 }
@@ -25,6 +29,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'hanks.xyz:smallbang-library:0.1.2'
+    compile 'com.android.support:multidex:1.0.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
