--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,13 +29,13 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.google.firebase:firebase-ads:10.0.1'
+//    compile 'com.google.firebase:firebase-ads:10.0.1'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'hanks.xyz:smallbang-library:0.1.2'
     compile 'com.android.support:multidex:1.0.0'
-    compile('com.mopub:mopub-sdk:4.9.0@aar') {
-        transitive = true
-    }
+//    compile('com.mopub:mopub-sdk:4.9.0@aar') {
+//        transitive = true
+//    }
     compile 'com.intuit.sdp:sdp-android:1.0.4'
 
 }
