--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,9 @@ android {
     buildToolsVersion '25.0.0'
 
     defaultConfig {
-        applicationId "com.quarklab.volo"
+        applicationId "com.quarklabs.volo"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -29,13 +29,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.android.support:appcompat-v7:23.4.0'
-//    compile 'com.google.firebase:firebase-ads:10.0.1'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'hanks.xyz:smallbang-library:0.1.2'
     compile 'com.android.support:multidex:1.0.0'
-//    compile('com.mopub:mopub-sdk:4.9.0@aar') {
-//        transitive = true
-//    }
     compile 'com.intuit.sdp:sdp-android:1.0.4'
 }
 
