--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.quarklabs.volo"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 3
+        versionCode 4
         versionName "1.0"
         multiDexEnabled true
     }
@@ -26,7 +26,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
 
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.firebase:firebase-ads:10.0.1'
@@ -34,6 +33,11 @@ dependencies {
     compile 'hanks.xyz:smallbang-library:0.1.2'
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.intuit.sdp:sdp-android:1.0.4'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:+'
+    testCompile 'junit:junit:4.12'
 }
+
+
 
 apply plugin: 'com.google.gms.google-services'
