--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,21 +6,20 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
-
-        <meta-data android:name="com.google.android.gms.version"
+        <meta-data
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
         <provider
@@ -28,12 +27,12 @@
             android:authorities="com.facebook.app.FacebookContentProvider916130085175917"
             android:exported="true" />
 
-        <activity android:name="com.quarklabs.volo.GameBoard">
+        <activity android:name=".GameBoard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-        <activity android:name="com.quarklabs.volo.SquareBash">
+        <activity android:name=".SquareBash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,9 +44,9 @@
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@style/FullyTranslucent"
-            tools:replace="android:theme"
-            />
-        <activity android:name="com.quarklabs.volo.LeaderBoard"></activity>
+            tools:replace="android:theme" />
+        <activity android:name=".LeaderBoard" />
+        <activity android:name=".HowToPlay"></activity>
     </application>
 
 </manifest>
